# CMakeList.txt : CMake project for WebBrowser2, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (WebBrowser2 "WebBrowser2.cpp" "WebBrowser2.h" "glyph.h" "poly_iterator.h" "builder.h")

# TODO: Add tests and install targets if needed.
